Some changes on files

--- a/src/main_screen.form
+++ b/src/main_screen.form
@@ -184,7 +184,16 @@
                   <background color="-13008640"/>
                 </properties>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <component id="5dc91" class="javax.swing.JList" binding="list1" default-binding="true">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="50"/>
+                      </grid>
+                    </constraints>
+                    <properties/>
+                  </component>
+                </children>
               </grid>
             </children>
           </grid>
