--- a/src/main_screen.form
+++ b/src/main_screen.form
@@ -129,7 +129,7 @@
                           <text value="Between Numbers:"/>
                         </properties>
                       </component>
-                      <component id="cf594" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+                      <component id="cf594" class="javax.swing.JTextField" binding="num_from">
                         <constraints>
                           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
@@ -137,7 +137,7 @@
                         </constraints>
                         <properties/>
                       </component>
-                      <component id="fdd3a" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+                      <component id="fdd3a" class="javax.swing.JTextField" binding="num_to">
                         <constraints>
                           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                             <preferred-size width="150" height="-1"/>
