New features on Advanced Search

--- a/src/main_screen.form
+++ b/src/main_screen.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="main_screen">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="true" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="891" height="526"/>
+      <xy x="20" y="20" width="961" height="571"/>
     </constraints>
     <properties>
       <preferredSize width="700" height="500"/>
@@ -37,7 +37,7 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <grid id="7bfd1" layout-manager="GridLayoutManager" row-count="7" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="7bfd1" layout-manager="GridLayoutManager" row-count="9" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="5" left="5" bottom="5" right="5"/>
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -56,6 +56,7 @@
                         </constraints>
                         <properties>
                           <text value=""/>
+                          <toolTipText value="Put &quot;,&quot; between words"/>
                         </properties>
                       </component>
                       <component id="7da8a" class="javax.swing.JTextField" binding="exact_word">
@@ -64,7 +65,10 @@
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
-                        <properties/>
+                        <properties>
+                          <text value=""/>
+                          <toolTipText value="Put &quot;,&quot; between words"/>
+                        </properties>
                       </component>
                       <component id="c6600" class="javax.swing.JLabel">
                         <constraints>
@@ -88,7 +92,10 @@
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
-                        <properties/>
+                        <properties>
+                          <text value=""/>
+                          <toolTipText value="Put &quot;,&quot; between words"/>
+                        </properties>
                       </component>
                       <component id="cbc7f" class="javax.swing.JLabel">
                         <constraints>
@@ -106,6 +113,7 @@
                         </constraints>
                         <properties>
                           <text value=""/>
+                          <toolTipText value="Put &quot;,&quot; between words"/>
                         </properties>
                       </component>
                       <component id="9b9d" class="javax.swing.JLabel">
@@ -164,17 +172,22 @@
                           <text value="Filetype (Select) :"/>
                         </properties>
                       </component>
-                      <component id="2c57f" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+                      <component id="2c57f" class="javax.swing.JComboBox" binding="terms_in">
                         <constraints>
                           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
-                        <properties/>
+                        <properties>
+                          <font size="11"/>
+                        </properties>
                       </component>
-                      <component id="d42b4" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+                      <component id="d42b4" class="javax.swing.JComboBox" binding="file_types">
                         <constraints>
                           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                         </constraints>
-                        <properties/>
+                        <properties>
+                          <enabled value="true"/>
+                          <font size="10"/>
+                        </properties>
                       </component>
                       <component id="874ca" class="javax.swing.JLabel">
                         <constraints>
@@ -198,8 +211,133 @@
                             <preferred-size width="150" height="-1"/>
                           </grid>
                         </constraints>
+                        <properties>
+                          <enabled value="false"/>
+                        </properties>
+                      </component>
+                      <component id="95aa4" class="javax.swing.JSeparator">
+                        <constraints>
+                          <grid row="7" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
                         <properties/>
                       </component>
+                      <grid id="8a335" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                        <margin top="0" left="0" bottom="0" right="0"/>
+                        <constraints>
+                          <grid row="8" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties/>
+                        <border type="line" title="Developed by" title-justification="2">
+                          <color color="-16711421"/>
+                        </border>
+                        <children>
+                          <component id="f862f" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="Ali Karatana"/>
+                            </properties>
+                          </component>
+                          <component id="27688" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="Berkay Uğur"/>
+                            </properties>
+                          </component>
+                        </children>
+                      </grid>
+                      <grid id="6a68a" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                        <margin top="5" left="5" bottom="5" right="5"/>
+                        <constraints>
+                          <grid row="8" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties/>
+                        <border type="line" title="Advanced Properties" title-justification="2" title-position="2">
+                          <font/>
+                          <color color="-16711421"/>
+                        </border>
+                        <children>
+                          <component id="a8250" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="In Language:"/>
+                            </properties>
+                          </component>
+                          <component id="483f9" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+                            <constraints>
+                              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties/>
+                          </component>
+                          <component id="2ddc5" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="In Region:"/>
+                            </properties>
+                          </component>
+                          <component id="4552d" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+                            <constraints>
+                              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties/>
+                          </component>
+                          <component id="a9781" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="Last Update:"/>
+                            </properties>
+                          </component>
+                          <component id="136bb" class="javax.swing.JComboBox" default-binding="true">
+                            <constraints>
+                              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties/>
+                          </component>
+                          <component id="b1a54" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="Search in the site:"/>
+                            </properties>
+                          </component>
+                          <component id="76d27" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+                            <constraints>
+                              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                <preferred-size width="150" height="-1"/>
+                              </grid>
+                            </constraints>
+                            <properties>
+                              <toolTipText value="Domain name"/>
+                            </properties>
+                          </component>
+                          <component id="c827a" class="javax.swing.JLabel">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="Cache Search (Anonymous):"/>
+                            </properties>
+                          </component>
+                          <component id="a7699" class="javax.swing.JRadioButton" binding="radioButton1" default-binding="true">
+                            <constraints>
+                              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value=""/>
+                            </properties>
+                          </component>
+                        </children>
+                      </grid>
                     </children>
                   </grid>
                   <component id="2a322" class="javax.swing.JButton" binding="searchButton" default-binding="true">
@@ -214,7 +352,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="325d" binding="ghdb" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="325d" binding="ghdb" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="5" left="5" bottom="5" right="5"/>
             <constraints>
               <tabbedpane title="Google Hacking Database"/>
@@ -233,10 +371,20 @@
                 <children>
                   <component id="1e25b" class="javax.swing.JList" binding="list1" default-binding="true">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <font name="Bitstream Vera Sans Mono" size="9" style="0"/>
+                    </properties>
                   </component>
                 </children>
               </scrollpane>
+              <component id="df0a" class="javax.swing.JButton" default-binding="true">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Use Selected Google Dork"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="30b0a" binding="zday" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
